[project]
name = "jfetcher"
version = "3.10.0"
description = "简书数据采集工具"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "FHU-yezi", email = "yehaowei20060411@qq.com" }]
requires-python = ">=3.9"
dependencies = [
    "jkit>=3.0.0b4",
    "prefect>=3.2.0",
    "sshared[config, postgres, retry]>=0.21.0",
]

[tool.uv]
dev-dependencies = ["pyright>=1.1.0", "ruff>=0.9.0"]

[tool.ruff]
target-version = "py39"
lint.select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "FA",
    "FBT",
    "FURB",
    "I",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T20",
    "TID",
    "TRY",
    "UP",
    "W",
]
lint.ignore = [
    "A005",
    "PERF203",
    "RUF001",
    "RUF002",
    "RUF003",
    "S311",
    "TRY003",
]

lint.flake8-builtins.builtins-ignorelist = ["id", "range", "type"]