[project]
name = "jfetcher"
version = "4.2.0"
description = "简书数据采集工具"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "FHU-yezi", email = "yehaowei20060411@qq.com" }]
requires-python = ">=3.9"
dependencies = [
    "jkit>=3.0.0b5",
    "prefect>=3.2.0",
    "sshared[config, postgres, retry]>=0.21.0",
]

[tool.uv]
dev-dependencies = ["pyright>=1.1.0", "ruff>=0.11.0"]

[tool.ruff]
target-version = "py39"
lint.select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "E",
    "F",
    "FA",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "TRY",
    "UP",
    "W",
]
lint.ignore = [
    "PERF203",
    "PGH003",
    "PLR0913",
    "PLR2004",
    "RUF001",
    "RUF002",
    "RUF003",
    "S311",
    "TRY003",
]
lint.flake8-builtins.builtins-ignorelist = ["id", "range", "type"]
